# ml_service_project

./: .env.example  .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  models.py  predictions.py  users.py
backend/app/auth/: jwt.py
backend/app/core/: config.py
backend/app/database/: database.py
backend/app/models/: insert_models.sql  models.py  update_models.py
backend/app/queue/: tasks.py  worker.py
backend/app/schemas/: model.py  prediction.py  transaction.py  user.py
backend/app/utils/: ml_client.py
docker/: docker-compose.yml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docker/ml_service/: Dockerfile
frontend/: README.md  app.py  pyproject.toml  utils.py
frontend/pages/: 💰Баланс.py  📃История.py  📈Предсказания.py
ml_service/: README.md  model.ipynb  pyproject.toml
ml_service/app/: debug.py  debug_load_models.py  main.py
ml_service/models/: lightgbm_btc.pkl  prophet_btc_model.pkl  xgboost_btc.pkl
