[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["theycallmemax <123394453+theycallmemax@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = {extras = ["all"], version = ">=0.115.12,<0.116.0"}
uvicorn = {extras = ["standard"], version = ">=0.34.2,<0.35.0"}
sqlalchemy = ">=2.0.40,<3.0.0"
rq = "*"
redis = "*"
psycopg2-binary = "*"
bcrypt = "~=3.2.0"
passlib = {extras = ["bcrypt"], version = "~=1.7.4"}
python-jose = {extras = ["cryptography"], version = "*"}
python-multipart = "*"
requests = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
