[tool.poetry]
name = "frontend"
version = "0.1.0"
description = "Фронтенд для ML-сервиса предсказаний цен криптовалют"
authors = ["theycallmemax <123394453+theycallmemax@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = ">=1.30.0"
requests = ">=2.31.0"
pandas = ">=2.1.0"
matplotlib = "*"
plotly = "*"
seaborn = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
