[tool.poetry]
name = "ml-service"
version = "0.1.0"
description = ""
authors = ["theycallmemax <123394453+theycallmemax@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.2,<0.35.0"
pydantic = ">=2.11.4,<3.0.0"
joblib = ">=1.5.0,<2.0.0"
pandas = ">=2.2.3,<3.0.0"
numpy = ">=2.2.5,<3.0.0"
xgboost = ">=3.0.0,<4.0.0"
lightgbm = ">=4.6.0,<5.0.0"
pybit = ">=5.10.1,<6.0.0"
prophet = ">=1.1.6,<2.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
exceptiongroup = ">=1.2.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
